[MOD] modify views

--- a/src/KitWebBundle/Resources/views/Common/bottom.html.twig
+++ b/src/KitWebBundle/Resources/views/Common/bottom.html.twig
@@ -22,9 +22,8 @@
 							</li>
 							<li><a href="">友情链接</a>
 								<ul>
-									<li><a href="http://www.sxwater.gov.cn/">山西省水利厅</a></li>
-									<li><a href="http://www.shanxigov.cn/">山西省人民政府</a></li>
-									<li><a href="http://www.shanxiga.gov.cn/">山西省公安厅</a></li>
+									<li><a href="">kitcloud</a></li>
+									<li><a href="">kitlabs</a></li>
 								</ul>
 							</li>
 						</ul>
@@ -34,7 +33,7 @@
 							<div class="float-left txt-border radius-circle border-main">
 								<div class="txt radius-circle bg-main icon-phone text-large"></div>
 							</div>
-							<div class="media-body"><strong class="text-big text-main">0351-4666309</strong>举报电话</div>
+							<div class="media-body"><strong class="text-big text-main"></strong>举报电话</div>
 						</div>
 						<div class="media media-x">
 							<div class="float-left txt-border radius-circle border-main">
