--- a/src/KitWebBundle/Resources/views/Common/footer.html.twig
+++ b/src/KitWebBundle/Resources/views/Common/footer.html.twig
@@ -3,10 +3,10 @@
 				<div class="navbar">
 					<div class="navbar-head">
 						<button class="button bg-gray icon-navicon" data-target="#navbar-footer"></button>
-						<!-- <a href="http://www.pintuer.com" target="_blank"><img class="logo" src="{{ asset('static/images/24-white.png') }}" alt="水政监督系统" /></a>  -->
+						<!-- <a href="http://www.pintuer.com" target="_blank"><img class="logo" src="{{ asset('static/images/24-white.png') }}" alt="" /></a>  -->
 					</div>
 					<div class="navbar-body nav-navicon" id="navbar-footer">
-						<div class="navbar-text navbar-left hidden-s hidden-l">版权所有 &copy; <a href="#" target="_blank">水政执法</a> All Rights Reserved，晋ICP备05004666号</div>
+						<div class="navbar-text navbar-left hidden-s hidden-l">版权所有 &copy; <a href="#" target="_blank">KITCLOUD</a> All Rights Reserved</div>
 						<ul class="nav nav-inline navbar-right">
 							<li><a href="/">首页</a></li>
 							<li><a href="{{ path('kit_user_homepage') }}">个人中心</a></li>
