--- a/src/KitWebBundle/Resources/views/Common/header.html.twig
+++ b/src/KitWebBundle/Resources/views/Common/header.html.twig
@@ -18,7 +18,7 @@
     	<div class="line">
     	   <div class="xl12 xs7 xm7 xb7">
     			<button class="button icon-navicon float-right" data-target="#header-demo"></button>
-    			<a target="_blank" href="/"><img src="{{ asset('static/images/logo.png') }}" alt="水政执法监督平台" /></a>
+    			<a target="_blank" href="/"><img src="{{ asset('static/images/logo.png') }}" alt="logo" /></a>
     		</div>
     		<div class="xs4 xm4 xb4 padding-top" style="display: none">
 				<form>
