[MOD] update backend views

--- a/src/KitAdminBundle/Resources/views/Login/login.html.twig
+++ b/src/KitAdminBundle/Resources/views/Login/login.html.twig
@@ -12,7 +12,7 @@
 					<br />
 					<form action="{{ path('kit_admin_login_check') }}" method="post">
 						<div class="panel">
-							<div class="panel-head"><strong>登录水利监督系统</strong></div>
+							<div class="panel-head"><strong>登录后台管理系统</strong></div>
 							<div class="panel-body" style="padding:30px;">
 							     {% if error %}
 							     <div class="form-group">
