--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,7 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<meta name="renderer" content="webkit">
-		<title>{% block title %}水政执法监督平台{% endblock %}</title>
+		<title>{% block title %}后台管理系统{% endblock %}</title>
 		{% block stylesheets %}
 		  <link rel="stylesheet" href="{{ asset('public/pintuer2/css/pintuer.css') }}">
 		  <link rel="stylesheet" href="{{ asset('public/pintuer2/css/admin.css') }}">
