[MOD] update views

--- a/src/KitAdminBundle/Resources/views/Default/index.html.twig
+++ b/src/KitAdminBundle/Resources/views/Default/index.html.twig
@@ -9,7 +9,7 @@
     <div class="line">
         <div class="x8">
             <blockquote class="quote border-yellow doc-quoteyellow">
-    			<strong> 欢迎使用水政执法监督系统</strong>
+    			<strong> 欢迎使后台管理系统</strong>
     		</blockquote>
         </div>
     </div> 
