--- a/src/KitWebBundle/Resources/views/layout.html.twig
+++ b/src/KitWebBundle/Resources/views/layout.html.twig
@@ -4,7 +4,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<title>{% block title %}水政执法监督平台{% endblock %}</title>
+		<title>{% block title %}KitPHP{% endblock %}</title>
 		
 		{% block stylesheets %}
 		  <link rel="stylesheet" href="{{ asset('public/pintuer2/css/pintuer.css') }}">
