[MOD] update theme twig extension

--- a/src/KitWebBundle/Resources/views/Default/index.html.twig
+++ b/src/KitWebBundle/Resources/views/Default/index.html.twig
@@ -40,7 +40,7 @@ content %}
             <div class="xl12 xs6 xm6 xb6">
                 <div class="panel panel-new">
     				<div class="panel-head panel-head-new">
-    					<strong>综合要闻</strong>
+    					<strong>综合要闻{{ theme('abc', 'test') }}</strong>
     					<a href="{{ path('kit_web_news_list', {id: 4}) }}"><span class="float-right">更多</span></a>
     				</div>
     				<div class="panel-body panel-body-new">
