--- a/src/KitAdminBundle/Resources/views/Config/new.html.twig
+++ b/src/KitAdminBundle/Resources/views/Config/new.html.twig
@@ -1,16 +1,14 @@
-{% extends 'base.html.twig' %}
-
-{% block body %}
-    <h1>Config creation</h1>
-
-    {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <input type="submit" value="Create" />
-    {{ form_end(form) }}
-
-    <ul>
-        <li>
-            <a href="{{ path('config_index') }}">Back to the list</a>
-        </li>
-    </ul>
+{% extends 'base.html.twig' %} 
+{% form_theme form 'form_theme_pintuer.html.twig' %}
+{% block main_content %}
+    <div class="line">
+        <div class="x6">
+        {% for error in errors %}
+        <div class="alert alert-yellow">
+            <span class="close rotate-hover"></span><strong>提示：</strong>{{ error }}
+        </div>
+        {% endfor %}
+            {{ form(form, {'attr': {'novalidate': 'novalidate', 'class': 'form-x', 'id': 'form'}}) }}
+        </div>
+    </div> 
 {% endblock %}
